<resources>
    <string name="app_name">PhotoSync</string>
    <string name="settings">Settings</string>
    <string name="sync_now">Sync</string>
    <string name="pull">Pull</string>
    <string name="auto_backup">Automatic backup</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="scanning">Scanning device…</string>
    <string name="stop">Stop sync</string>
</resources>
